Add TourGuide_Performance_Graphs.xlsx and ExcelWirter.java to complete excel file Update according to sonarQube comments and add lombok